--- a/static/index.html
+++ b/static/index.html
@@ -111,9 +111,14 @@
 </div>
 
 <div ng-app="ChoctawLessons" ng-controller="LessonsCtrl">
-    <div ng-repeat="lesson in lessons">
-        {{lesson.text}}<br>
-    </div>
+    <table class="table">
+        <tr ng-repeat="lesson in lessons">
+            <td>{{$index + 1}}</td>
+            <td>{{lesson.description}}</td>
+            <td><textarea size=60>{{lesson.text}}</textarea></td>
+            <td><img src="{{lesson.imageUrl}}" style="max-height: 50px; max-width: auto"/></td>
+        </tr>
+    </table>
 </div>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-resource.js"></script>
