only show 10 at a time, better formatting.

--- a/static/index.html
+++ b/static/index.html
@@ -115,7 +115,7 @@
         <tr ng-repeat="lesson in lessons">
             <td>{{$index + 1}}</td>
             <td>{{lesson.description}}</td>
-            <td><textarea size=60>{{lesson.text}}</textarea></td>
+            <td><textarea cols=60 rows=3>{{lesson.text}}</textarea></td>
             <td><img src="{{lesson.imageUrl}}" style="max-height: 50px; max-width: auto"/></td>
         </tr>
     </table>
