--- a/static/index.html
+++ b/static/index.html
@@ -105,7 +105,9 @@
     the FB.login() function when clicked.
 -->
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+<div id="fb-button">
+    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+</div>
 
 <div id="status">
 </div>
